--- a/site_style.css
+++ b/site_style.css
@@ -23,7 +23,7 @@
 
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: monospace;
 }
 
 * {
@@ -82,4 +82,56 @@ body {
 #myMenu li a:hover {
   background-color: rgb(255, 255, 255);
 
+}
+
+/* Style Project Menu */
+/* .tab-content can be styled as you like */
+main {
+  max-width: 400px;
+  margin: 0 auto;
+}
+p {
+    text-align: justify;
+    font-family: monospace;
+    font-size: 13px;
+}
+summary {
+  font-size: 1rem;
+  font-weight: 600;
+  background-color: #f3f3f3;
+  color: #000;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  outline: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  position: relative;
+}
+details[open] summary ~ * {
+  animation: sweep .5s ease-in-out;
+}
+@keyframes sweep {
+  0%    {opacity: 0; margin-top: -10px}
+  100%  {opacity: 1; margin-top: 0px}
+}
+details > summary::after {
+  position: absolute;
+  content: "+";
+  right: 20px;
+}
+details[open] > summary::after {
+  position: absolute;
+  content: "-";
+  right: 20px;
+}
+details > summary::-webkit-details-marker {
+  display: none;
+}
+
+/*
+  overall frame
+*/
+div#frame
+{
+  display: flex;
 }
